--- a/views/pages/services_bg.ejs
+++ b/views/pages/services_bg.ejs
@@ -57,7 +57,7 @@
                 <a class="btn btn-outline-secondary col-md-6 col-lg-4" id="road-transport-btn" onclick="showroadTransportContent()">Автомобилен транспорт</a>
             </div>
         </div>
-        <div class="container" id="courier-content">
+        <div class="container service-visible" id="courier-content">
             <p class="lead">Градски куриер</p>
             <div class="row">
                 <div class="col-md-8">Име</div>
@@ -76,10 +76,10 @@
                 <div class="col-md-4">3.00лв.</div>
             </div>
         </div>
-        <div class="container" id="forwarding-content">
+        <div class="container service-invisible" id="forwarding-content">
             <p class="lead">Спедиторски услуги</p>
         </div>
-        <div class="container" id="road-transport-content">
+        <div class="container service-invisible" id="road-transport-content">
             <p class="lead">Автомобилен транспорт</p>
         </div>
     </section>
