change the page title in bg lang

--- a/views/pages/contacts_bg.ejs
+++ b/views/pages/contacts_bg.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <% include ../partials/header.ejs %>
+    <% include ../partials/header_bg.ejs %>
 </head>
 
 <body id="page-top">
@@ -23,7 +23,7 @@
                         <a class="nav-link js-scroll-trigger" href="/">Начало</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="">Услуги</a>
+                        <a class="nav-link js-scroll-trigger" href="/services-bg">Услуги</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="/#about">За Нас</a>
