--- a/views/pages/index_en.ejs
+++ b/views/pages/index_en.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <% include ../partials/header.ejs %>
+    <% include ../partials/header_en.ejs %>
 </head>
 
 <body id="page-top">
@@ -23,7 +23,7 @@
                         <a class="nav-link js-scroll-trigger" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="">Services</a>
+                        <a class="nav-link js-scroll-trigger" href="/services-en">Services</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#about">About</a>
