--- a/views/pages/index_bg.ejs
+++ b/views/pages/index_bg.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <% include ../partials/header.ejs %>
+    <% include ../partials/header_bg.ejs %>
 </head>
 
 <body id="page-top">
