add energy projects page

--- a/views/pages/energy_projects_bg.ejs
+++ b/views/pages/energy_projects_bg.ejs
@@ -29,13 +29,13 @@
                         <a class="nav-link js-scroll-trigger" href="/#about">За Нас</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/energy-projects-bg">Енергийни Проекти</a>
+                        <a class="nav-link js-scroll-trigger" href="#">Енергийни Проекти</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#">Контакти</a>
+                        <a class="nav-link js-scroll-trigger" href="/contacts-bg">Контакти</a>
                     </li>
                     <li>
-                        <a class="language-flag" href="/contacts-en"><img id="en-flag" src="/img/en-flag.png"></a>
+                        <a class="language-flag" href="/energy-projects-en"><img id="en-flag" src="/img/en-flag.png"></a>
                     </li>
                 </ul>
             </div>
@@ -48,44 +48,10 @@
     <section id="contact" class="content-section text-center">
         <div class="container">
             <div class="col-lg-8 mx-auto">
-                <h2>Връзка с Арти Логистикс ЕООД</h2>
-                <p>За да се свържете с нас, моля изпратете e-mail или се свържете с нас на посочените телефони!</p>
-            </div>
-            <div class="row">
-                <div class="col-md-6 col-lg-4">
-                    <span class="contact-item d-block mx-auto">
-                            <span>Д. Господинов</span>
-                    <p>Мениджър Спедиция</p>
-                    <a href="mailto:d.gospodinov@artilogistics.bg">D.Gospodinov@artilogistics.bg</a>
-                    <p>Phone: ‎+359 895 477 825</p>
-                    </span>
-                </div>
-                <div class="col-md-6 col-lg-4">
-                    <span class="contact-item d-block mx-auto">
-                            <span>Г. Димова</span>
-                    <p>Спедитор</p>
-                    <a href="mailto:g.dimova@artilogistics.bg">G.Dimova@artilogistics.bg</a>
-                    <p>Phone: ‎+359 876 076 015</p>
-                    </span>
-                </div>
-                <div class="col-md-6 col-lg-4">
-                    <span class="contact-item d-block mx-auto">
-                                <span>Офис</span>
-                    <p><br></p>
-                    <a href="mailto:office@artilogistics.bg">office@artilogistics.bg</a>
-                    <p>гр. Бургас, ул. Цар Петър 14, офис 14</p>
-                    </span>
-                </div>
-            </div>
-            <div class="row contacts-web" style="justify-content:center">
-                <a target="_blank" href="https://www.facebook.com/Arti-Logistics-100923340690221/" class="btn btn-default btn-lg"><i class="fa fa-fw fa-facebook"></i> <span class="network-name">Facebook</span></a>
-                <a target="_blank" href="https://plus.google.com/u/0/114751744327009316590" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-            </div>
+                <h2>Очаквайте скоро</h2>
+            </div>            
         </div>
     </section>
-
-    <!-- Map Section -->
-    <div id="map"></div>
 
     <!-- Footer -->
     <footer class="footer text-center">
