--- a/views/pages/energy_projects_en.ejs
+++ b/views/pages/energy_projects_en.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <% include ../partials/header_bg.ejs %>
+    <% include ../partials/header_en.ejs %>
 </head>
 
 <body id="page-top">
@@ -10,8 +10,8 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="/">
-                <i><img id="logo" src="/img/logo.png"></i> <span class="light">Арти Логистикс</span>
+            <a class="navbar-brand js-scroll-trigger" href="/en">
+                <i><img id="logo" src="/img/logo.png"></i> <span class="light">Arti Logistics</span>
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                   Menu
@@ -20,79 +20,43 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/">Начало</a>
+                        <a class="nav-link js-scroll-trigger" href="/en">Home</a>
                     </li>
                     <!-- <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/services-bg">Услуги</a>
+                        <a class="nav-link js-scroll-trigger" href="/services-en">Services</a>
                     </li> -->
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/#about">За Нас</a>
+                        <a class="nav-link js-scroll-trigger" href="/en#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/energy-projects-bg">Енергийни Проекти</a>
+                        <a class="nav-link js-scroll-trigger" href="#">Energy Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#">Контакти</a>
+                        <a class="nav-link js-scroll-trigger" href="/contacts-en">Contact</a>
                     </li>
                     <li>
-                        <a class="language-flag" href="/contacts-en"><img id="en-flag" src="/img/en-flag.png"></a>
+                        <a class="language-flag" href="/energy-projects-bg"><img id="en-flag" src="/img/bg-flag.png"></a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-
-
     <!-- Contact Section -->
     <section id="contact" class="content-section text-center">
         <div class="container">
             <div class="col-lg-8 mx-auto">
-                <h2>Връзка с Арти Логистикс ЕООД</h2>
-                <p>За да се свържете с нас, моля изпратете e-mail или се свържете с нас на посочените телефони!</p>
-            </div>
-            <div class="row">
-                <div class="col-md-6 col-lg-4">
-                    <span class="contact-item d-block mx-auto">
-                            <span>Д. Господинов</span>
-                    <p>Мениджър Спедиция</p>
-                    <a href="mailto:d.gospodinov@artilogistics.bg">D.Gospodinov@artilogistics.bg</a>
-                    <p>Phone: ‎+359 895 477 825</p>
-                    </span>
-                </div>
-                <div class="col-md-6 col-lg-4">
-                    <span class="contact-item d-block mx-auto">
-                            <span>Г. Димова</span>
-                    <p>Спедитор</p>
-                    <a href="mailto:g.dimova@artilogistics.bg">G.Dimova@artilogistics.bg</a>
-                    <p>Phone: ‎+359 876 076 015</p>
-                    </span>
-                </div>
-                <div class="col-md-6 col-lg-4">
-                    <span class="contact-item d-block mx-auto">
-                                <span>Офис</span>
-                    <p><br></p>
-                    <a href="mailto:office@artilogistics.bg">office@artilogistics.bg</a>
-                    <p>гр. Бургас, ул. Цар Петър 14, офис 14</p>
-                    </span>
-                </div>
-            </div>
-            <div class="row contacts-web" style="justify-content:center">
-                <a target="_blank" href="https://www.facebook.com/Arti-Logistics-100923340690221/" class="btn btn-default btn-lg"><i class="fa fa-fw fa-facebook"></i> <span class="network-name">Facebook</span></a>
-                <a target="_blank" href="https://plus.google.com/u/0/114751744327009316590" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-            </div>
+                <h2>coming soon</h2>
+            </div>            
         </div>
     </section>
-
-    <!-- Map Section -->
-    <div id="map"></div>
 
     <!-- Footer -->
     <footer class="footer text-center">
         <div class="container">
             <div class="row">
                 <div class="col-md-4 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase mb-4">Телефон</h4>
+                    <h4 class="text-uppercase mb-4">Phone</h4>
                     <p class="lead mb-0">+359 895 477 825</p>
                 </div>
                 <div class="col-md-4 mb-5 mb-lg-0">
@@ -121,7 +85,7 @@
     <!-- Copyright Section -->
     <div class="copyright py-2 text-center text-white">
         <div class="container">
-            <small>Запазени права &copy; Арти Логистикс ЕООД 2017</small>
+            <small>Copyright &copy; Arti Logistics LTD 2017</small>
         </div>
     </div>
 
