--- a/views/pages/index_bg.ejs
+++ b/views/pages/index_bg.ejs
@@ -22,11 +22,14 @@
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#">Начало</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="/services-bg">Услуги</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#about">За Нас</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="/energy-projects-bg">Енергийни Проекти</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="/contacts-bg">Контакти</a>
