--- a/views/pages/services_en.ejs
+++ b/views/pages/services_en.ejs
@@ -29,6 +29,9 @@
                         <a class="nav-link js-scroll-trigger" href="/en#about">About</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="/energy-projects-en">Energy Projects</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="/contacts-en">Contact</a>
                     </li>
                     <li>
