--- a/views/pages/contacts_en.ejs
+++ b/views/pages/contacts_en.ejs
@@ -22,11 +22,14 @@
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="/en">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="/services-en">Services</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="/en#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="/energy-projects-en">Energy Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#">Contact</a>
