--- a/views/pages/services_bg.ejs
+++ b/views/pages/services_bg.ejs
@@ -29,6 +29,9 @@
                         <a class="nav-link js-scroll-trigger" href="/#about">За Нас</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="/energy-projects-bg">Енергийни Проекти</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="/contacts-bg">Контакти</a>
                     </li>
                     <li>
